@@ -64,6 +64,6 @@
          "web" : "https://github.com/sanko/net-bittorrent-protocol"
       }
    },
-   "version" : "1.0.2",
+   "version" : "1.5",
    "x_serialization_backend" : "JSON::PP version 2.27400"
 }
