@@ -1,5 +1,5 @@
 package Net::BitTorrent::Protocol::BEP10;
-our $MAJOR = 1; our $MINOR = 0; our $PATCH = 0; our $DEV = ''; our $VERSION = sprintf('%0d.%0d.%0d' . ($DEV =~ m[S] ? '-%s' : ''), $MAJOR, $MINOR, $PATCH, $DEV);
+our $VERSION = "1.5";
 use Carp qw[carp];
 use Net::BitTorrent::Protocol::BEP03::Bencode qw[:all];
 use vars qw[@EXPORT_OK %EXPORT_TAGS];
